Typo correction on about page

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: cornsilk;
     font-size: 20px;
 }
-
+-
 .navbar {
     background-color: #ffffff;
     margin-bottom: 20px;
